[package]
name = "move-assembler"
version = "0.1.0"
edition = "2021"


[dependencies]
move-binary-format = { git = "https://github.com/aptos-labs/aptos-core" }
move-core-types = { git = "https://github.com/aptos-labs/aptos-core" }
move-bytecode-verifier = { git = "https://github.com/aptos-labs/aptos-core" }
move-ir-types = { git = "https://github.com/aptos-labs/aptos-core" }
move-bytecode-source-map = { git = "https://github.com/aptos-labs/aptos-core" }
move-disassembler = { git = "https://github.com/aptos-labs/aptos-core" }

clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "^1.0.128"
regex = "^1.11.0"